--- a/src/SortingVisualer/SortingArray.css
+++ b/src/SortingVisualer/SortingArray.css
@@ -5,10 +5,9 @@
     
 }
 .div{
-    background-color: blue;    
-    height: 10vh;
+    background-color: blue;
     float: left;
-    margin: 1px;
-    padding: 0px;
+    margin-left: 0.2vw;
+    margin-right: 0.2vw;
 
 }
