Visualise the BubbleSort

--- a/src/SortingVisualer/SortingArray.css
+++ b/src/SortingVisualer/SortingArray.css
@@ -5,7 +5,7 @@
     
 }
 .div{
-    background-color: blue;
+    /*background-color: blue;*/
     float: left;
     margin-left: 0.2vw;
     margin-right: 0.2vw;
