--- a/src/SortingVisualer/SortingVis.css
+++ b/src/SortingVisualer/SortingVis.css
@@ -15,3 +15,11 @@ button{
     height: 5vh;
     margin-top: 2.5vh;
 }
+
+.slidecontainer{
+    float: left;
+    width: 100%;
+    height: 5vh;
+    margin-top: 2.5vh;
+
+}
